# podman-mcp

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.py
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
podman_mcp/: server.py
tests/: test_server.py
